# opencv_project

./: .gitignore  CMakeLists.txt  Makefile  colorDetection.cpp  colordetector.cpp  colordetector.h  colorhistogram.h  contentFinder.cpp  contentFinder.h  finder.cpp  histogram.h  histograms.cpp  huesaturation.cpp  imageComparator.h  main.cpp
